# cerebra

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README_CEREBRA_ORIGINAL.md  SECURITY.md  cerebra-relay.py  pyproject.toml  pyrightconfig.json
.claude/: AGENTS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
cerebra/: __init__.py  config.py
cerebra/_primitives/: VENDORED_FROM.md  __init__.py  bandit.py  clutch.py  mode_router.py  score_composer.py  tombstone_set.py  trajectory.py  triangulator.py
cerebra/cli/: __init__.py  daemon.py  inspect.py  lockfile.py  main.py
cerebra/cognition/: __init__.py  _constants.py  catalyst.py  clutch.py  clutch_stub.py  continuation_bundle.py  cycle_config.py  cycle_runtime.py  episode_writer.py  evaluation.py  event_emitter.py  lattice.py  llm_adapter.py  predictions.py  reinjection.py  session.py  signals.py  sku.py  sku_categories.py  sku_classifier.py  sku_relationships.py  stop_conditions.py  truth_tower.py  working_memory.py
cerebra/governance/: __init__.py  defaults.py  gate_events.py  loader.py  models.py  pre_action_gate.py  types.py
cerebra/graph/: exporter.py  model.py
cerebra/ingest/: __init__.py  chunking.py  models.py  normalization.py  pipeline.py
cerebra/inspector/: __init__.py  event.py  ndjson_log.py  sqlite_log.py
cerebra/memory/: __init__.py  lifecycle.py  records.py
cerebra/retrieval/: __init__.py  context_packet.py  d1_keywords.toml  lattice_dedup.py  planner.py  scorer.py  trace.py  traversal.py
cerebra/sources/: __init__.py  detector.py  discovery.py  hashing.py  registry.py
cerebra/storage/: __init__.py  artifact_store.py  db.py  embeddings.py  fossic_store.py  graph_store.py  index_state.py  lexical.py  migrations.py  sqlite_store.py
cerebra/vault/: __init__.py  init.py
cycles/: planning.adaptive.v0.yaml  simple.planning.v0.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_STATE.md  CEREBRA_CLASSIC.md  CHANGELOG.md  HISTORY.md  KNOWN_ISSUES.md  README.md  SETUP.md  TECH_DEBT.md
docs/agent/: CEREBRA_CLAUDE.md  CEREBRA_DISCORD_PROTOCOL.md  PASS_REPORTING.md  cross_claude_tracker.md  fixture_audit_round2.md  granite41_3b_validation.md  granite41_3b_validation_raw.json  multi_model_comparison.md  multi_model_comparison_raw.json  multi_model_comparison_raw_round2.json  multi_model_comparison_round2.md  pass_complete_template_reference.md  phase7_emission_pattern.md  phase7_governance_audit.md  phase8_close.md  phase9_close.md  phase9_primitive_audit.md  v0.3.0_dev_setup.md  validation_sample_chunks.json
docs/archive/: DESIGN_SPECS.md  DEVELOPMENT_LOG.md  README.md  STATE_REPORTS.md
docs/aseptic/: FUTURE_DIRECTIONS.md  LIVING_REPORTS.md  POLISH_DEBT.md  TECH_DEBT.md  aseptic_methodology_rundown.md  polish_debt_seed.md  tech_debt_seed.md
docs/brainstorm/: DEFERRED_DOCS.md  README.md
docs/planning/: AGENT_TRACE_VOCABULARY.md  cerebra-field-notes.html  cycle_config_schema.md  phase6_cycle_runtime_thesis.md  phase6_cycle_runtime_thesis_v2.md  phase_8_integration_decisions.md  simple_planning_v0_cycle_config.md  v01_phase6_needs.md  v02_lora_planning_v2.md
docs/policy-scout/: CEREBRA_ARCHITECTURE.md  CEREBRA_DOC_INDEX.md  CEREBRA_IMPLEMENTATION_PLAN.md  CEREBRA_MEMORY_LAYERS.md  CEREBRA_MVP_SPEC.md  CEREBRA_PROJECT_SCOPE.md
docs/refined-runtime-model/: CEREBRA_ARCHITECTURE.md  CEREBRA_CATALYST.md  CEREBRA_COGNITIVE_RUNTIME.md  CEREBRA_CONSOLIDATION_ENGINE.md  CEREBRA_CONTEXT_PACKET_PROTOCOL.md  CEREBRA_DEV_ROADMAP_v8.1.md  CEREBRA_DIAGRAM_MANIFEST.md  CEREBRA_DOC_INDEX.md  CEREBRA_DRIFT_FIXES_v8.1.md  CEREBRA_GRAPH_MODEL.md  CEREBRA_INGESTION_ARCHITECTURE.md  CEREBRA_INSPECTOR.md  CEREBRA_KICKOFF_PROMPT.md  CEREBRA_LEEWAY_NETWORK.md  CEREBRA_MATRICES.md  CEREBRA_MEMORY_LAYERS.md  CEREBRA_MEMORY_LIFECYCLE.md  CEREBRA_MERMAID_DIAGRAMS.md  CEREBRA_MVP_SPEC.md  CEREBRA_OPEN_QUESTIONS.md  CEREBRA_ORTHOGONAL_ABLATION.md  CEREBRA_PREDICTION_AND_EVALUATION.md  CEREBRA_PROJECT_SCOPE.md  CEREBRA_PROTOTYPE_CHECKLIST.md  CEREBRA_REINJECTION_LOOP.md  CEREBRA_REPLACEMENT_MANIFEST.md  CEREBRA_RETRIEVAL_ARCHITECTURE.md  CEREBRA_SALIENCE_SCORING.md  CEREBRA_SCENARIO_CARDS.md  CEREBRA_SIGNAL_EPISTEMOLOGY.md  CEREBRA_SKU_ADDRESSING.md  CEREBRA_STATE_GOVERNANCE.md  CEREBRA_TESTING_STRATEGY.md  CEREBRA_TRUTH_TOWER.md  CEREBRA_VISUAL_PRODUCTION_PLAN.md  CEREBRA_WORKING_MEMORY_AND_ATTENTION.md  LATTICA_PRIMITIVES.md  lattica_primitives_bandit_section.md
docs/state-reports/: 01_system_overview.md  02_cli_surface.md  03_storage_layer.md  04_sources_ingest_graph.md  05_sku_retrieval.md  06_cognition_runtime.md  07_wm_tower_clutch_catalyst.md  08_memory_governance_inspector.md  09_cycle_config_events_flows.md
docs/workflows/: brainstorm_docs_update_prompt.md  cerebra-adapter.md  cerebra_phase2_consultation_round2.md  fixture_audit_round2_prompt.md  granite41_validation_prompt.md  lora_run1_diagnostic_report.md  multi_model_comparison_pass_report.md  phase2_response.md  post-training-mcp-discussion.md  smol-mcp-server-report.md  stage3_review_tui_prompt.md  topology_probe_poc_prompt.md  v02_lora_planning_v3.md
examples/docs/: cognitive_architecture.md  event_sourcing.md  knowledge_systems.md
scripts/: verify_docs.py
scripts/experimental/: granite41_validation.py  multi_model_calibration.py  multi_model_calibration_round2.py
scripts/v02_training/: README.md  base_vs_instruct.py  build_training_corpus.py  evaluate_lora.py  recover_stage2.py  stage1_export.py  stage2_consensus.py  stage3_review.py  topology_probe.py  train_lora.py
tests/: conftest.py
tests/fixtures/: sku_fixtures.py
tests/integration/: test_abstention_against_vault.py  test_catalyst_e2e.py  test_context_cli_against_vault.py  test_context_packet_against_vault.py  test_context_t1_against_vault.py  test_cycle_e2e.py  (+22 more)
(+171 files in other folders)
