[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebra"
version = "0.3.2"
description = "Local-first cognitive runtime"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "numpy>=2.0,<3.0",
    "sentence-transformers>=3.0",
    "fossic @ file:///home/boop/Projects/fossic/fossic-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
]

[project.scripts]
cerebra = "cerebra.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerebra*"]

# ── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# ── black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fossic", "fossic.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, in-memory, no filesystem I/O",
    "integration: uses temp vault + real SQLite; may load ML models (~1.5 GB on first run)",
]
# Integration tests run by default. To skip model-loading tests:
#   python -m pytest -m "not integration"
addopts = "--cov=cerebra --cov-report=term-missing --cov-fail-under=80"

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["cerebra"]
omit = [
    "cerebra/__init__.py",
    "cerebra/*/  __init__.py",
    "cerebra/**/__init__.py",
    "cerebra/_primitives_canonical/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
